[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylk"
version = "0.1.0"
description = "Machine learning utilites"
authors = [
	{ name = "Christopher Leap", email = "cleapdev@gmail.com" }
]

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib",
]
